--- a/app/src/main/res/layout/fragment_progress_status.xml
+++ b/app/src/main/res/layout/fragment_progress_status.xml
@@ -5,12 +5,24 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/totalBiWeek"
+            android:textColor="#000000"
+            android:layout_alignBottom="@+id/hoursProgress"
+            android:layout_centerHorizontal="true"
+            android:textSize="22dp"
+            android:text="Test"
+            android:layout_marginBottom="60dp"
+            android:textIsSelectable="true" />
 
         <ProgressBar
             android:layout_width="match_parent"
@@ -22,9 +34,13 @@
             android:progressBackgroundTint="@android:color/darker_gray"
             android:progressTint="#FF5722"
             android:outlineProvider="paddedBounds"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/textView14"
-            android:layout_marginTop="184dp" />
+            android:layout_alignParentTop="false"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentBottom="false"
+            android:layout_centerVertical="true"
+            android:indeterminate="false" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +50,8 @@
             android:id="@+id/textView14"
             android:layout_below="@+id/hoursProgress"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="1dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +61,8 @@
             android:id="@+id/textView16"
             android:layout_below="@+id/hoursProgress"
             android:layout_alignRight="@+id/hoursProgress"
-            android:layout_alignEnd="@+id/hoursProgress" />
+            android:layout_alignEnd="@+id/hoursProgress"
+            android:layout_marginTop="1dp" />
 
     </RelativeLayout>
 </FrameLayout>
