--- a/app/src/main/res/layout/fragment_week1.xml
+++ b/app/src/main/res/layout/fragment_week1.xml
@@ -5,7 +5,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center">
 
@@ -18,7 +18,8 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/textView3"
             android:selectAllOnFocus="true"
-            android:layout_marginStart="60dp" />
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="60dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -86,10 +87,14 @@
             android:textSize="20dp"
             android:text="Monday"
             android:id="@+id/textView"
-            android:layout_marginStart="40dp"
             android:layout_above="@+id/tueField"
-            android:layout_alignParentStart="true"
-            android:textColor="#747474" />
+            android:layout_alignParentStart="false"
+            android:textColor="#747474"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentRight="false" />
 
         <TextView
             android:layout_width="wrap_content"
