Final project commit.

--- a/app/src/main/res/layout/fragment_week1.xml
+++ b/app/src/main/res/layout/fragment_week1.xml
@@ -4,10 +4,17 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+
+        android:id="@+id/scrollView" >
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center">
+        android:layout_gravity="center_horizontal">
 
         <EditText
             android:layout_width="wrap_content"
@@ -174,4 +181,8 @@
             android:layout_alignStart="@+id/textView7" />
 
     </RelativeLayout>
+    </ScrollView>
+
+
+
 </FrameLayout>
